@@ -27,6 +27,7 @@ Group                     Functions
 Sequence transformation   :func:`map`, :func:`imap`, :func:`keep`, :func:`ikeep`, :func:`mapcat`, :func:`imapcat`
 Sequence filtering        :func:`filter`, :func:`ifilter`, :func:`remove`, :func:`iremove`
 Sequence splitting        :func:`dropwhile`, :func:`takewhile`, :func:`split`, :func:`split_by`
+Sequence chunking         :func:`group_by`, :func:`count_by`, :func:`partition_by`, :func:`ipartition_by`
 Collection transformation :func:`walk`, :func:`walk_keys`, :func:`walk_values`
 Collection filtering      :func:`select`, :func:`select_keys`, :func:`select_values`
 Content tests             :func:`all`, :func:`any`, :func:`none`, :func:`one`, :func:`some`
